[gd_scene load_steps=6 format=3 uid="uid://b6cpvl7nvugcp"]

[ext_resource type="Texture2D" uid="uid://g1kfywydy7lc" path="res://Images/boss-removebg-preview.png" id="1_ayfg3"]
[ext_resource type="Script" uid="uid://wmam3wsn7unw" path="res://Scripts/Enemies/boss.gd" id="1_p1f3m"]
[ext_resource type="PackedScene" uid="uid://dlx1gm4u8lkh2" path="res://Scenes/boss_bullet.tscn" id="3_5afma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5afma"]
radius = 96.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_fdynt"]
radius = 95.0053

[node name="boss" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_p1f3m")

[node name="image" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("1_ayfg3")

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(8, -11)
shape = SubResource("CircleShape2D_5afma")

[node name="boss_area" type="Area2D" parent="."]

[node name="area_col" type="CollisionShape2D" parent="boss_area"]
position = Vector2(8, -11)
shape = SubResource("CircleShape2D_fdynt")

[node name="on_screen" type="VisibleOnScreenNotifier2D" parent="."]

[node name="boss_bullet" parent="." instance=ExtResource("3_5afma")]
position = Vector2(9.5, 96)

[node name="laser_pos" type="Marker2D" parent="."]
position = Vector2(8, 99)

[connection signal="area_entered" from="boss_area" to="." method="_on_area_entered"]
